--- a/content/posts/魔法上网一键脚本指南.md
+++ b/content/posts/魔法上网一键脚本指南.md
@@ -1,7 +1,7 @@
 ---
 title: "魔法上网一键脚本指南"
 date: 2023-05-26T23:48:09+08:00
-draft: true
+draft: false
 description: 
 tags: [脚本,魔法上网]
 categories: [科学上网]
