--- a/content/posts/魔法上网一键脚本指南.md
+++ b/content/posts/魔法上网一键脚本指南.md
@@ -12,7 +12,7 @@ categories: [科学上网]
 > - 风险提示：一键脚本使用存在风险，包括但是不限于系统被不安全的脚本入侵或病毒攻击。
 > - 关于推荐指数：⭐⭐⭐⭐⭐ 为最高推荐，未知代表本人使用次数较少或者并未使用，并不代表脚本不能使用或者脚本存在问题。推荐指数仅代表个人观点，如果你有不同观点，以你为准，这里不讨论。
 
-本次脚本收集尽可能的选择开源的一键脚本，有些脚本可能已经停止使用，但是仍然可以正常使用，有些脚本可能会存在系统兼容的问题，具体情况需要参考官方的一键脚本的使用文档。
+本次脚本收集尽可能的选择开源的一键脚本，有些脚本可能已经停止维护或者维护较慢，但是仍然可以正常使用，有些脚本可能会存在系统兼容的问题，具体情况需要参考官方的一键脚本的使用文档。
 
 本文只是作为收集整理，不对脚本的使用做任何保证。
 
