--- a/content/posts/记录一次因时间问题导致的代理失效问题.md
+++ b/content/posts/记录一次因时间问题导致的代理失效问题.md
@@ -1,7 +1,7 @@
 ---
 title: "记录一次因时间问题导致的代理失效问题"
 date: 2024-04-17T15:52:58+08:00
-draft: true
+draft: false
 description: 
 tags: ['科学上网', 'V2ray']
 categories: ['科学上网']
